--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#2a388f</color>
+    <color name="colorPrimaryDark">#2a388f</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="bottom_nav_normal">#aaaaaa</color>
+    <color name="bottom_nav_checked">@android:color/white</color>
 </resources>
