--- a/app/src/main/res/layout/activity_swan.xml
+++ b/app/src/main/res/layout/activity_swan.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".SduActivity">
+    tools:context=".SwanActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="          มหาวิทยาลัยสวนดุสิตจัดตั้งขึ้นเพื่อเป็นโรงเรียนการเรือนแห่งแรกของประเทศไทย ชื่อ“โรงเรียนมัธยมวิสามัญการเรือน” สังกัดกองอาชีวศึกษา กรมวิชาการ กระทรวงธรรมการ (กระทรวงศึกษาธิการ) เปิดดำเนินการเมื่อวันที่ 17 พฤษภาคม พ.ศ.2477 ที่วังกรมหลวงชุมพรเขตอุดมศักดิ์ (ปัจจุบันเป็นที่ตั้งของมหาวิทยาลัย-เทคโนโลยีราชมงคล วิทยาเขตพณิชยการพระนคร) มีจุดมุ่งหมายเพื่ฝึกอบรมการบ้านการเรือนสำหรับสตรีหลักสูตร 4 ปี"
+            android:text="                หม่อมหลวงปิ่น มาลากุล ได้เขียนบทละครสังคีต เรื่อง “หงส์ทอง” ให้กับวิทยาลัยครูสวนดุสิตโดยเขียนตามเค้าเรื่อง Le Lac des Cygnes ของ Piotor ILich Tchaibowsky หรือ Swan Lake (โดยปีเตอร์อิลิชไชคอฟ สกี นำมาแต่งบัลเล่ต์หรือระบำปลายเท้าขนาดเล็ก Lebedinoje osero ซึ่งมีการแสดงดนตรีประกอบการระบำปลายเท้า มีการจัดแสดงที่โรงละคร Bolshoi กรุงมอสโกและอีกหลายโรงละคร) หม่อมหลวงปิ่น มาลากุล จึงได้นำเค้าเรื่องดังกล่าวมาประยุกต์กับบทละครและให้มีการจัดแสดงครั้งแรกในงานแจกประกาศนียบัตรของนักศึกษาวิทยาลัยครูสวนดุสิต เมื่อวันที่ ๑๐ มีนาคม ปีพุทธศักราช ๒๕๑๐ ในปีต่อมาเมื่อมีผู้นิยมชมละครที่นักศึกษาแสดงมากขึ้น ผู้อำนวยการของวิทยาลัยครูสวนดุสิต ขณะนั้น (คุณหญิงกระจ่างศรี รักตะกนิษฐ) จึงได้คิดที่จะทำให้เกิดประโยชน์กับนักศึกษาที่ขาดแคลนทุนทรัพย์ จึงจัดให้นักศึกษาไปแสดงเรื่อง “หงส์ทอง” ทางวิทยุ โทรทัศน์ มีผู้บริจาคเงินเพื่อตั้งเป็นกองทุนการศึกษา เรียกว่า “ทุนหงส์ทอง” จำนวนมากโดยจัดแสดงในวันที่ ๒๔ ตุลาคม ปีพุทธศักราช ๒๕๑๑ เนื่องในวันคล้ายวันเกิดของ หม่อมหลวงปิ่น มาลากุล และ วิทยาลัยครูสวนดุสิต ถือว่า วันที่ ๒๔ ตุลาคม เป็น “วันหงส์ทอง” มีการมอบทุนการศึกษา และรับเงิน สมทบทุนเพิ่มเติม ในวัน “หงส์ทอง”"
             android:textColor="#ffffff"
             app:layout_constraintEnd_toEndOf="@+id/image_view"
             app:layout_constraintStart_toStartOf="@+id/image_view"
@@ -73,5 +73,4 @@
             app:layout_constraintTop_toBottomOf="@+id/content_text_view"/>
 
     </android.support.constraint.ConstraintLayout>
-</ScrollView
-    >
+</ScrollView>
